{
    "name": "InputSystem_Player",
    "maps": [
        {
            "name": "PlayerMove",
            "id": "cece468b-2844-45ca-a929-ec1faff9dfbe",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "50287e6b-b5ac-4203-b2f6-739130b6363f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "8a89a6bf-d4dc-4a2d-a178-e4d60f1e20c9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a627944f-9a0d-41d7-9d21-50e72842dbe0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d304bd9e-a950-4714-a4ea-c60761154433",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b422e4f1-d184-4798-ad26-83ce9a3cd0cb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dc50587e-7f6c-43a7-ba85-283cdaae68d1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerOperate",
            "id": "4140d2ad-5120-4de1-b4a9-8022ee47f1ae",
            "actions": [
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "9b0416bf-fde5-46b0-8983-aee342f1afc8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b2f1afdb-a89d-4f2a-b460-b97f57d998be",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}